--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
 			<ul>
 			<li align="center"><h3>MENU NAVIGASI</h3></li>
 			<li align="center"><h3>______________</h3></li>
-			<li><a href="#">UTAMA</a></li>
-			<li><a href="#">LAGU BANGSA JOHOR</a></li>
-			<li><a href="#">KESULTANAN JOHOR</a></li>
+			<li><a href="utama.html">UTAMA</a></li>
+			<li><a href="LaguBangsaJohor.html">LAGU BANGSA JOHOR</a></li>
+			<li><a href="KesultananJohor.html">KESULTANAN JOHOR</a></li>
+			<li><a href="Hubungi_kami.html">HUBUNGI KAMI</a></li>
 
 			</ul>
 			
@@ -39,6 +40,7 @@
 				As a rule, web community members having their own websites are open for communication, socialization and other things like that. Besides, personal websites serve as a kind of virtual CVs for their owners. 
 				Most often, if you are as sharp as a needle, seeing a person’s website, you’ll easily tell even more about site owner than he/she wanted to say.</p>
 			</div>
+	
 		</div>
 		
 		<div id="footer">Copyright &copy; 2018
